--- a/clan-war/package.json
+++ b/clan-war/package.json
@@ -7,14 +7,17 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jest-dom": "^4.0.0",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "react-testing-library": "^8.0.1",
     "redux": "^4.0.4",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
