--- a/clan-war/package.json
+++ b/clan-war/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "create-react-app": "^3.0.1",
     "jest-dom": "^4.0.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^8.0.5"
-  }
+    "@testing-library/react": "^8.0.5",
+    "gh-pages": "^2.0.1"
+  },
+  "homepage": "http://gitname.github.io/clan-war"
 }
