deployd to github

--- a/clan-war/package.json
+++ b/clan-war/package.json
@@ -48,5 +48,5 @@
     "@testing-library/react": "^8.0.5",
     "gh-pages": "^2.0.1"
   },
-  "homepage": "http://gitname.github.io/clan-war"
+  "homepage": "https://beneditatan.github.io/weworkassignment"
 }
